<resources>
    <string name="app_name">SeekingBabysitter</string>
    <string name="seeking_babysitter">Seeking Babysitter</string>
    <string name="apply">Apply</string>
    <string name="search">SEARCH</string>
    <string name="person_image">person image</string>
    <string name="full_name">Full name: </string>
    <string name="age">Age: </string>
    <string name="user_id">User ID: </string>
    <string name="city">City: </string>
    <string name="person_card_transition">card_transition_name</string>
    <string name="confirmed_babysitters">Confirmed Babysitters:</string>
    <string name="phone">Phone: </string>
    <string name="apply_as_a_babysitter">Apply as a Babysitter:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="age_ask">Age:</string>
    <string name="user_id_random">User ID:</string>
    <string name="phone_ask">Phone:</string>
    <string name="facebook_ask">Facebook:</string>
    <string name="send">Send</string>
    <string name="log_in">Log In</string>
    <string name="email">Email: </string>
    <string name="waiting_for_approval">Waiting for approval</string>
    <string name="waiting_for_review">Waiting for review</string>
    <string name="change_image">Change image</string>
    <string name="image_approved">Image approved</string>
    <string name="User_Data_Approved">User Data Approved!</string>
    <string name="check_info_user">Check your information!</string>
    <string name="check_images">Check your images!</string>
    <string name="check_images_info">Check your information and images!</string>
    <string name="not_loaded">Not Loaded</string>
    <string name="password">Password:</string>
    <string name="city_ask">City:</string>
    <string name="enter">ENTER</string>
    <string name="update_data">Update data:</string>
    <string name="save">SAVE</string>
    <string name="users_to_approve">Users To Approve:</string>
    <string name="approve">APPROVE</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_explain">Enter your email address and we will send you an email to reset your password.</string>
    <string name="profile_pic_of_user">profile pic of user</string>
    <string name="select_image">Select</string>
    <string name="upload_image">Upload Image</string>
    <string name="load_id_picture">Load ID picture:</string>
    <string name="load_profile_picture">Load Profile picture:</string>
    <string name="id_pic_of_user">id pic of user</string>
    <string name="loading">Loading...</string>
    <string name="profile_picture">Profile picture:</string>
    <string name="change">CHANGE</string>
    <string name="accept">ACCEPT</string>
    <string name="id_picture">ID picture:</string>
    <string name="approve_all">APPROVE ALL</string>
    <string name="not_approved">NOT APPROVED</string>
    <string name="approved">APPROVED</string>
    <string name="in_general">In General:</string>
    <string name="search_by_city">Search by City..</string>
    <string name="both">Both</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="search_by_gender">Search by Gender:</string>
    <string name="gender">Gender:</string>

</resources>