<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".fragments.DetailsFragment">

    <ImageView
        android:id="@+id/image_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/person_image" />

    <TextView
        android:id="@+id/full_name_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/full_name"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/age_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_horizontal"
        android:hint="@string/age"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

</LinearLayout>