<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiant_background"
    android:id="@+id/applyLayout"
    tools:context=".fragments.ApplyFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/apply_text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_as_a_babysitter"
        android:textColor="@color/purple"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:textSize="50sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/first_name"
            android:textColor="@color/purple"
            android:layout_gravity="center_vertical"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextPersonName"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:ems="10"
            android:textColor="@color/black"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/last_name"
            android:textColor="@color/purple"
            android:layout_gravity="center_vertical"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextPersonLastName"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:ems="10"
            android:textColor="@color/black"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/age_ask"
            android:textColor="@color/purple"
            android:layout_gravity="center_vertical"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextAge"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:ems="5"
            android:textColor="@color/black"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/phone_ask"
            android:textColor="@color/purple"
            android:layout_gravity="center_vertical"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:textColor="@color/black"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/city_ask"
            android:textColor="@color/purple"
            android:layout_gravity="center_vertical"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextCity"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ems="5"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/black"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/email"
            android:textColor="@color/purple"
            android:layout_gravity="center_vertical"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:ems="10"
            android:textColor="@color/black"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/user_id_random"
            android:textColor="@color/purple"
            android:layout_gravity="center_vertical"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/set_user_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:background="@color/light_grey"
            android:textSize="25sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/password"
            android:textColor="@color/purple"
            android:layout_gravity="center_vertical"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:ems="10"
            android:textColor="@color/black"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/load_profile_picture"
            android:textColor="@color/purple"
            android:layout_gravity="center_vertical"
            android:textSize="25sp"
            android:textStyle="bold" />

            <Button
                android:id="@+id/button_select_image_pro"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:textSize="15sp"
                android:text="@string/select_image" />

        </LinearLayout>

        <ImageView
            android:id="@+id/pro_pic_image"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/profile_pic_of_user"
            android:scaleType="centerCrop"
            android:background="@drawable/ic_add_photo"
            tools:ignore="ImageContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/load_id_picture"
                android:textColor="@color/purple"
                android:layout_gravity="center_vertical"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_select_image_id"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:textSize="15sp"
                android:text="@string/select_image" />
        </LinearLayout>

        <ImageView
            android:id="@+id/id_pic_image"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/ic_add_photo"
            android:contentDescription="@string/id_pic_of_user"
            android:scaleType="centerCrop"
            tools:ignore="ImageContrastCheck" />

    </LinearLayout>

    <Button
        android:id="@+id/button_apply"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:textSize="23sp"
        android:layout_marginBottom="50dp"
        android:text="@string/send" />

</LinearLayout>

</ScrollView>